--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <title>магазин фейерверков</title>
     <body>
-        <link>
+        <link rel="stylesheet" href="style.css"/>
         <head>
         <header>
             <img id ="logo" src="/uploads/2020/12/logo_0_1607675596.svg" height="40px"/>
